<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/activity_main_calledText" android:text=""
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/resetstring"
            android:onClick="onResetClicked"
            />

        <TextView android:id="@+id/activity_main_teepreftext" android:text=""
            android:layout_width="match_parent"
            android:layout_height="60sp" />
        <Button
            android:id="@+id/activity_main_button_editPref"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/editTeePrefs"
            />
        <Button
            android:id="@+id/activity_main_button_setDefaultPrefs"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/setDefaultTeePrefs"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/EditNote"
            android:onClick="onEditNoteClicked"
            />

    </LinearLayout>

</ScrollView>


