<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Note Text"
        android:id="@+id/activity_note_textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:minHeight="150sp"
        android:id="@+id/activity_note_notetext" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SafeOnExternalStorage"
        android:id="@+id/activity_note_checkBox_saveexternal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


        <Button
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:id="@+id/activity_note_button_ok"
            android:onClick="onSaveClicked"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Load"
            android:onClick="onLoadClicked"
            android:id="@+id/activity_note_button_cancel" />
        </LinearLayout>



</LinearLayout>